--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.evosuite.plugins</groupId>
+			<artifactId>evosuite-maven-plugin</artifactId>
+			<version>1.0.5</version>
 		</dependency>
 	</dependencies>
 	<build>
