--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+<dependency>
+    <groupId>com.jgoodies</groupId>
+    <artifactId>jgoodies-common</artifactId>
+    <version>1.8.1</version>
+</dependency>
+		
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
