--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <artifactId>jgoodies-common</artifactId>
     <version>1.8.1</version>
 </dependency>
+
 		
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
@@ -46,6 +47,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -70,6 +72,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+    <groupId>com.zenjava</groupId>
+    <artifactId>javafx-maven-plugin</artifactId>
+    <version>8.8.3</version>
+    <configuration>
+        <mainClass>your.package.with.Launcher</mainClass>
+    </configuration>
+</plugin>
 		</plugins>
 	</build>
 </project>
