--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.evosuite.plugins</groupId>
-			<artifactId>evosuite-maven-plugin</artifactId>
-			<version>1.0.5</version>
+			<groupId>com.zenjava</groupId>
+			<artifactId>javafx-maven-plugin</artifactId>
+			<version>8.8.3</version>
 		</dependency>
 	</dependencies>
 	<build>
